--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* ==== Google font ==== */
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600);
-@import url('font-awesome.css');
+/* @import url('font-awesome.css'); */
 /* ==== overwrite bootstrap standard ==== */
-@import url('animate.css');
+/* @import url('animate.css'); */
 
 
 
@@ -567,6 +567,9 @@ ul.social-network li a {
 }
 
 
-
-
+@media (min-width: 768px) {
+.container {
+  width: initial;
+}
+}
 
